--- a/app/index.html
+++ b/app/index.html
@@ -49,7 +49,7 @@
                 <div class="elationbar">
                     <div class="logo">
                         <a href="#">
-                            <img alt="ElationEMR" src="../images/elation_logo_white_128.png">
+                            <img alt="ElationEMR" src="/images/elation_logo_white_128.png">
                         </a>
                     </div>
                     <ul class="nav nav-pills">
